# Copyright 2010-2021, Google Inc.
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
#
#     * Redistributions of source code must retain the above copyright
# notice, this list of conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above
# copyright notice, this list of conditions and the following disclaimer
# in the documentation and/or other materials provided with the
# distribution.
#     * Neither the name of Google Inc. nor the names of its
# contributors may be used to endorse or promote products derived from
# this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

# Visibility:  please choose a more appropriate default for the package,
# and update any rules that should be different.

load(
    "//:build_defs.bzl",
    "mozc_cc_binary",
    "mozc_cc_library",
    "mozc_cc_test",
    "mozc_py_binary",
    "mozc_select",
)
load("//bazel:run_build_tool.bzl", "mozc_run_build_tool")

package(
    default_visibility = [
        "//:__subpackages__",
    ],
)

mozc_cc_library(
    name = "session_interface",
    hdrs = ["session_interface.h"],
    deps = [
        "//composer:table",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//session/internal:keymap",
        "//spelling:spellchecker_service_interface",
        "@com_google_absl//absl/time",
    ],
)

mozc_cc_library(
    name = "session_converter",
    srcs = ["session_converter.cc"],
    hdrs = ["session_converter.h"],
    deps = [
        ":session_converter_interface",
        ":session_usage_stats_util",
        "//base:logging",
        "//base:text_normalizer",
        "//base:util",
        "//composer",
        "//converter:converter_interface",
        "//converter:converter_util",
        "//converter:segments",
        "//protocol:candidates_cc_proto",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//request:conversion_request",
        "//session/internal:candidate_list",
        "//session/internal:session_output",
        "//transliteration",
        "//usage_stats",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/strings",
    ],
)

mozc_cc_test(
    name = "session_converter_test",
    size = "small",
    timeout = "moderate",
    srcs = ["session_converter_test.cc"],
    requires_full_emulation = False,
    shard_count = 8,
    tags = ["noandroid"],  # TODO(b/73698251): disabled due to errors
    deps = [
        ":request_test_util",
        ":session_converter",
        ":session_converter_interface",
        "//base:logging",
        "//base:util",
        "//composer",
        "//composer:table",
        "//converter:converter_mock",
        "//converter:segments",
        "//converter:segments_matchers",
        "//data_manager/testing:mock_data_manager",
        "//protocol:candidates_cc_proto",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//request:conversion_request",
        "//session/internal:candidate_list",
        "//testing:gunit_main",
        "//testing:mozctest",
        "//testing:testing_util",
        "//transliteration",
        "//usage_stats",
        "//usage_stats:usage_stats_testing_util",
        "@com_google_absl//absl/strings",
    ],
)

mozc_cc_test(
    name = "session_converter_stress_test",
    size = "small",
    srcs = ["session_converter_stress_test.cc"],
    requires_full_emulation = False,
    shard_count = 8,
    deps = [
        ":session_converter",
        "//base:port",
        "//base:random",
        "//base:system_util",
        "//composer",
        "//composer:table",
        "//config:config_handler",
        "//engine:engine_interface",
        "//engine:mock_data_engine_factory",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//testing:gunit_main",
        "@com_google_absl//absl/flags:flag",
    ],
)

mozc_cc_library(
    name = "session",
    srcs = ["session.cc"],
    hdrs = ["session.h"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":session_converter",
        ":session_converter_interface",
        ":session_interface",
        ":session_usage_stats_util",
        "//base:clock",
        "//base:logging",
        "//base:util",
        "//composer",
        "//composer:key_event_util",
        "//composer:table",
        "//converter:segments",
        "//engine:engine_interface",
        "//engine:user_data_manager_interface",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//session/internal:ime_context",
        "//session/internal:key_event_transformer",
        "//session/internal:keymap",
        "//session/internal:session_output",
        "//testing:gunit_prod",
        "//transliteration",
        "//usage_stats",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

mozc_cc_test(
    name = "session_test",
    size = "small",
    srcs = ["session_test.cc"],
    requires_full_emulation = False,
    shard_count = 8,
    deps = [
        ":request_test_util",
        ":session",
        "//base:logging",
        "//base:util",
        "//composer",
        "//composer:key_parser",
        "//composer:table",
        "//config:config_handler",
        "//converter:converter_mock",
        "//converter:segments",
        "//data_manager/testing:mock_data_manager",
        "//dictionary:pos_matcher",
        "//engine",
        "//engine:engine_mock",
        "//engine:mock_data_engine_factory",
        "//engine:user_data_manager_mock",
        "//protocol:candidates_cc_proto",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//request:conversion_request",
        "//rewriter:transliteration_rewriter",
        "//session/internal:ime_context",
        "//session/internal:keymap",
        "//testing:gunit_main",
        "//testing:mozctest",
        "//transliteration",
        "//usage_stats",
        "//usage_stats:usage_stats_testing_util",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

mozc_cc_test(
    name = "session_regression_test",
    size = "small",
    srcs = [
        "common.h",
        "session_regression_test.cc",
    ],
    requires_full_emulation = False,
    shard_count = 8,
    deps = [
        ":request_test_util",
        ":session",
        ":session_handler",
        "//base:logging",
        "//composer:key_parser",
        "//composer:table",
        "//config:config_handler",
        "//data_manager/testing:mock_data_manager",
        "//engine:mock_data_engine_factory",
        "//engine:user_data_manager_interface",
        "//protocol:candidates_cc_proto",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//session/internal:ime_context",
        "//testing:gunit_main",
        "//testing:mozctest",
        "@com_google_absl//absl/flags:flag",
    ],
)

mozc_cc_library(
    name = "session_observer_handler",
    srcs = ["session_observer_handler.cc"],
    hdrs = ["session_observer_handler.h"],
    deps = [
        ":session_observer_interface",
        "//protocol:commands_cc_proto",
    ],
)

mozc_cc_test(
    name = "session_observer_handler_test",
    size = "small",
    srcs = ["session_observer_handler_test.cc"],
    requires_full_emulation = False,
    deps = [
        ":session_observer_handler",
        ":session_observer_interface",
        "//protocol:commands_cc_proto",
        "//testing:gunit_main",
    ],
)

mozc_cc_library(
    name = "session_handler",
    srcs = [
        "common.h",
        "session_handler.cc",
    ],
    hdrs = ["session_handler.h"],
    deps = mozc_select(
        android = [
            "//spelling:spellchecker_service_interface",
        ],
        client = [],
        default = [
            ":session_watch_dog",
            "//base:process",
            "//spelling:spellchecker_service_interface",
        ],
        linux = [
            ":session_watch_dog",
            "//base:process",
        ],
        macos = [
            ":session_watch_dog",
            "//base:process",
        ],
        windows = [
            ":session_watch_dog",
            "//base:process",
        ],
    ) + [
        ":session",
        ":session_handler_interface",
        ":session_interface",
        ":session_observer_handler",
        "//base:clock",
        "//base:logging",
        "//base:port",
        "//base:singleton",
        "//base:stopwatch",
        "//base:util",
        "//base:version",
        "//composer",
        "//composer:table",
        "//config:character_form_manager",
        "//config:config_handler",
        "//converter:converter_interface",
        "//dictionary:user_dictionary_session_handler",
        "//engine:engine_builder_interface",
        "//engine:engine_interface",
        "//engine:user_data_manager_interface",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//protocol:engine_builder_cc_proto",
        "//protocol:user_dictionary_storage_cc_proto",
        "//session/internal:keymap",
        "//storage:lru_cache",
        "//testing:gunit_prod",
        "//usage_stats",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/random",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

mozc_cc_library(
    name = "session_handler_test_util",
    testonly = True,
    srcs = [
        "common.h",
        "session_handler_test_util.cc",
    ],
    hdrs = ["session_handler_test_util.h"],
    deps = mozc_select(
        android = [
            "//spelling:spellchecker_service_interface",
            "//spelling:spellchecker_service_registration",
        ],
        default = [
            ":session_watch_dog",
        ],
        linux = [
            ":session_watch_dog",
            "//spelling:spellchecker_service_interface",
            "//spelling:spellchecker_service_registration",
        ],
    ) + [
        ":session_handler",
        ":session_handler_interface",
        ":session_interface",
        ":session_observer_handler",
        ":session_usage_observer",
        "//base:config_file_stream",
        "//base:file_util",
        "//base:logging",
        "//base:port",
        "//base:system_util",
        "//base/file:temp_dir",
        "//composer:table",
        "//config:character_form_manager",
        "//config:config_handler",
        "//converter:converter_interface",
        "//dictionary:user_dictionary_session_handler",
        "//engine:engine_builder_interface",
        "//engine:engine_interface",
        "//prediction:user_history_predictor",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//session/internal:keymap",
        "//storage:lru_cache",
        "//storage:registry",
        "//testing",
        "//testing:gunit_prod",
        "//testing:mozctest",
        "//usage_stats:usage_stats_testing_util",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/random",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

mozc_cc_test(
    name = "session_handler_test",
    size = "small",
    timeout = "long",
    srcs = [
        "common.h",
        "session_handler_test.cc",
    ],
    requires_full_emulation = False,
    deps = [
        ":session_handler",
        ":session_handler_test_util",
        "//base:clock_mock",
        "//base:port",
        "//base:stopwatch",
        "//base:util",
        "//config:config_handler",
        "//converter:converter_mock",
        "//engine:engine_builder_interface",
        "//engine:engine_mock",
        "//engine:engine_stub",
        "//engine:mock_data_engine_factory",
        "//engine:user_data_manager_mock",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//testing:gunit_main",
        "//usage_stats",
        "//usage_stats:usage_stats_testing_util",
        "@com_google_absl//absl/flags:flag",
    ],
)

mozc_cc_library(
    name = "session_server",
    srcs = [
        "common.h",
        "session_server.cc",
    ],
    hdrs = ["session_server.h"],
    tags = ["noandroid"],
    deps = [
        ":session_handler",
        ":session_handler_interface",
        ":session_usage_observer",
        "//base:logging",
        "//base:port",
        "//engine:engine_factory",
        "//ipc",
        "//ipc:named_event",
        "//protocol:commands_cc_proto",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

mozc_cc_library(
    name = "request_test_util",
    srcs = ["request_test_util.cc"],
    hdrs = ["request_test_util.h"],
    deps = [
        "//base:port",
        "//composer:table",
        "//protocol:commands_cc_proto",
    ],
    # TODO(team): Ideally this target is testonly but evaluation/ shares
    # this target to change the request object in a scoped way. We can
    # again make this testonly after removing the global request object.
    # testonly = True
)

mozc_cc_test(
    name = "request_test_util_test",
    size = "small",
    srcs = ["request_test_util_test.cc"],
    requires_full_emulation = False,
    deps = [
        ":request_test_util",
        "//protocol:commands_cc_proto",
        "//testing:gunit_main",
    ],
)

mozc_cc_binary(
    name = "session_client_main",
    srcs = [
        "session_client_main.cc",
    ],
    copts = ["$(STACK_FRAME_UNLIMITED)"],  # session_client_main.cc
    deps = [
        ":session",
        "//base:file_stream",
        "//base:file_util",
        "//base:init_mozc",
        "//base:logging",
        "//base:system_util",
        "//base:util",
        "//composer:key_parser",
        "//engine:engine_factory",
        "//engine:engine_interface",
        "//protocol:commands_cc_proto",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/status",
    ],
)

mozc_cc_library(
    name = "session_watch_dog",
    srcs = ["session_watch_dog.cc"],
    hdrs = ["session_watch_dog.h"],
    tags = ["noandroid"],
    deps = [
        "//base:clock",
        "//base:cpu_stats",
        "//base:logging",
        "//base:system_util",
        "//base:thread",
        "//client",
        "//client:client_interface",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
    ],
)

mozc_cc_test(
    name = "session_watch_dog_test",
    size = "small",
    srcs = ["session_watch_dog_test.cc"],
    requires_full_emulation = False,
    tags = [
        "noandroid",
        "nomac",  # TODO(b/281742982) flaky for mac on forge
    ],
    deps = [
        ":session_watch_dog",
        "//base:cpu_stats",
        "//base:logging",
        "//client:client_mock",
        "//testing:gunit_main",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
    ],
)

mozc_cc_library(
    name = "session_usage_observer",
    srcs = ["session_usage_observer.cc"],
    hdrs = ["session_usage_observer.h"],
    deps = [
        ":session_observer_interface",
        "//base:clock",
        "//base:logging",
        "//config:stats_config_util",
        "//protocol:candidates_cc_proto",
        "//protocol:commands_cc_proto",
        "//protocol:state_cc_proto",
        "//usage_stats",
        "//usage_stats:usage_stats_cc_proto",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/synchronization",
    ],
)

mozc_cc_test(
    name = "session_usage_observer_test",
    size = "small",
    srcs = ["session_usage_observer_test.cc"],
    requires_full_emulation = False,
    tags = ["noandroid"],  # TODO(b/73698251): disabled due to errors
    deps = [
        ":session_usage_observer",
        "//base:clock",
        "//base:clock_mock",
        "//base:logging",
        "//base:system_util",
        "//base:util",
        "//config:stats_config_util",
        "//config:stats_config_util_mock",
        "//protocol:commands_cc_proto",
        "//testing:gunit_main",
        "//usage_stats",
        "//usage_stats:usage_stats_cc_proto",
        "//usage_stats:usage_stats_testing_util",
        "@com_google_absl//absl/flags:flag",
    ],
)

mozc_cc_library(
    name = "key_info_util",
    srcs = ["key_info_util.cc"],
    hdrs = ["key_info_util.h"],
    deps = [
        "//base:config_file_stream",
        "//base:logging",
        "//base:util",
        "//composer:key_event_util",
        "//composer:key_parser",
        "//config:config_handler",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//session/internal:keymap",
        "@com_google_absl//absl/strings",
    ],
)

mozc_cc_test(
    name = "key_info_util_test",
    size = "small",
    srcs = ["key_info_util_test.cc"],
    requires_full_emulation = False,
    deps = [
        ":key_info_util",
        "//composer:key_parser",
        "//config:config_handler",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//testing:gunit_main",
    ],
)

mozc_cc_library(
    name = "session_usage_stats_util",
    srcs = ["session_usage_stats_util.cc"],
    hdrs = ["session_usage_stats_util.h"],
    deps = [
        "//base:logging",
        "//base:port",
        "//base:util",
        "//protocol:commands_cc_proto",
        "//usage_stats",
        "@com_google_absl//absl/strings",
    ],
)

mozc_cc_test(
    name = "session_usage_stats_util_test",
    size = "small",
    srcs = ["session_usage_stats_util_test.cc"],
    requires_full_emulation = False,
    deps = [
        ":session_usage_stats_util",
        "//composer:key_parser",
        "//protocol:commands_cc_proto",
        "//testing:gunit_main",
        "//usage_stats",
        "//usage_stats:usage_stats_testing_util",
    ],
)

mozc_py_binary(
    name = "gen_session_stress_test_data",
    srcs = ["gen_session_stress_test_data.py"],
)

mozc_run_build_tool(
    name = "session_stress_test_data",
    srcs = {
        "--input": [
            "//data/test/quality_regression_test:oss.tsv",
        ],
    },
    outs = {
        "--output": "session_stress_test_data.h",
    },
    tool = ":gen_session_stress_test_data",
)

mozc_cc_library(
    name = "random_keyevents_generator",
    srcs = [
        "random_keyevents_generator.cc",
        ":session_stress_test_data",
    ],
    hdrs = ["random_keyevents_generator.h"],
    deps = [
        "//base:japanese_util",
        "//base:logging",
        "//base:port",
        "//base:util",
        "//composer:key_parser",
        "//protocol:commands_cc_proto",
        "//session/internal:keymap",
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/random",
        "@com_google_absl//absl/random:distributions",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

mozc_cc_test(
    name = "random_keyevents_generator_test",
    size = "small",
    srcs = ["random_keyevents_generator_test.cc"],
    requires_full_emulation = False,
    deps = [
        ":random_keyevents_generator",
        "//protocol:commands_cc_proto",
        "//testing:gunit_main",
    ],
)

mozc_cc_test(
    name = "session_handler_stress_test",
    size = "small",
    timeout = "moderate",
    srcs = [
        "common.h",
        "session_handler_stress_test.cc",
    ],
    requires_full_emulation = False,
    shard_count = 16,
    tags = ["noandroid"],  # TODO(b/73698251): disabled due to errors
    deps = [
        ":random_keyevents_generator",
        ":request_test_util",
        ":session_handler_tool",
        "//engine:engine_factory",
        "//protocol:commands_cc_proto",
        "//testing:gunit_main",
        "//testing:mozctest",
        "@com_google_absl//absl/flags:flag",
    ],
)

mozc_cc_library(
    name = "session_handler_tool",
    srcs = ["session_handler_tool.cc"],
    hdrs = ["session_handler_tool.h"],
    tags = ["noandroid"],  # TODO(b/73698251): disabled due to errors
    deps = [
        ":request_test_util",
        ":session_handler",
        ":session_handler_interface",
        ":session_observer_interface",
        ":session_usage_observer",
        "//base:config_file_stream",
        "//base:file_stream",
        "//base:file_util",
        "//base:number_util",
        "//base:util",
        "//base/protobuf:descriptor",
        "//base/protobuf:message",
        "//base/protobuf:text_format",
        "//composer:key_parser",
        "//config:character_form_manager",
        "//config:config_handler",
        "//converter:converter_interface",
        "//engine:engine_factory",
        "//engine:engine_interface",
        "//engine:user_data_manager_interface",
        "//prediction:user_history_predictor",
        "//protocol:candidates_cc_proto",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//storage:registry",
        "//usage_stats",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

mozc_cc_binary(
    name = "session_handler_main",
    srcs = ["session_handler_main.cc"],
    tags = ["noandroid"],  # TODO(b/73698251): disabled due to errors
    deps = [
        ":session_handler_tool",
        "//base:file_stream",
        "//base:init_mozc",
        "//base:system_util",
        "//data_manager/oss:oss_data_manager",
        "//engine",
        "//protocol:candidates_cc_proto",
        "//protocol:commands_cc_proto",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ] + mozc_select(
        default = [
            "//data_manager/android:android_data_manager",
            "//data_manager/google:google_data_manager",
        ],
        oss = [],
    ),
)

mozc_cc_test(
    name = "session_handler_scenario_test",
    size = "small",
    timeout = "moderate",
    srcs = ["session_handler_scenario_test.cc"],
    data = [
        "//data/test/session/scenario:scenario_files",
        "//data/test/session/scenario/usage_stats:usage_stats_scenario_files",
    ],
    requires_full_emulation = False,
    shard_count = 8,
    tags = [
        "manual",
        "noandroid",  # TODO(b/73698251): disabled due to errors
        "nofastbuild",
    ],
    deps = [
        ":request_test_util",
        ":session_handler_test_util",
        ":session_handler_tool",
        "//base:file_stream",
        "//base:file_util",
        "//base:number_util",
        "//base:util",
        "//base/protobuf:descriptor",
        "//base/protobuf:message",
        "//base/protobuf:text_format",
        "//engine:engine_interface",
        "//engine:mock_data_engine_factory",
        "//prediction:user_history_predictor",
        "//protocol:candidates_cc_proto",
        "//protocol:commands_cc_proto",
        "//testing:gunit_main",
        "//testing:mozctest",
        "//usage_stats:usage_stats_testing_util",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

mozc_cc_library(
    name = "session_handler_interface",
    hdrs = ["session_handler_interface.h"],
    visibility = [
        "//:__subpackages__",
    ],
    deps = [
        ":session_observer_interface",
        "//protocol:commands_cc_proto",
        "@com_google_absl//absl/strings",
    ],
)

mozc_cc_library(
    name = "session_converter_interface",
    hdrs = ["session_converter_interface.h"],
    visibility = ["//session/internal:__pkg__"],
    deps = [
        "//composer",
        "//converter:converter_interface",
        "//converter:segments",
        "//protocol:commands_cc_proto",
        "//protocol:config_cc_proto",
        "//transliteration",
    ],
)

mozc_cc_library(
    name = "session_observer_interface",
    hdrs = ["session_observer_interface.h"],
    visibility = ["//visibility:private"],
    deps = ["//protocol:commands_cc_proto"],
)
